2005-01-26  Jorn Baayen  <jbaayen@gnome.org>

	* src/Database.cs:
	* src/Song.cs:

	Small cleanup: Introduce Database.PackStringArray.

2005-01-26  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:

	When using the last track hack to determine an album's completeness,
	special case the case where there is only one track: Only mark it as
	an album if the track is at least 10 minutes long.

	Also do "half album" checking in the "last track" case if the 
	last track is at least 8. Otherwise too much junk falls through.

2005-01-26  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/AddWindow.glade:
	* data/glade/PlaylistWindow.glade:

	Horizontal scrollbar policies to never.

2005-01-25  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	0.8.1pre3.

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/Database.cs:
	* src/SongDatabase.cs:

	Remove DecodeFunction property.

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/db.c: (db_store):
	* libmuine/db.h:
	* src/CoverDatabase.cs:
	* src/Database.cs:
	* src/SongDatabase.cs:

	Don't require an EncodeFunction anymore.

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* src/HandleView.cs:

	Fix for Mono 1.1.x. Patch by Peter Johanson.

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* README:
	* configure.in:
	* libmuine/Makefile.am:
	R libmuine/string-utils.c:
	R libmuine/string-utils.h:
	* src/Album.cs:
	* src/Song.cs:
	* src/StringUtils.cs:

	Depend on new born GUnicode#:
	http://www.jbaayen.dds.nl/gunicode-sharp.html

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:

	0.8.1pre2.
	
	* src/AddWindow.cs:

	Small cleanup.

2005-01-24  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* libmuine/Makefile.am:
	* libmuine/pointer-list-model.c:
	(pointer_list_model_drag_data_received),
	(pointer_list_model_iter_get_pointer):
	* libmuine/pointer-list-model.h:
	R libmuine/pointer-list-view.c:
	R libmuine/pointer-list-view.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs: